# engrammer

./: Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  tox.ini
.sqa/: config.yml
engrammer/: api.py  config.py
tests/: test_api.py
