[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "engrammer"
authors = [
    { name = "Jesus Marco de Lucas IFCA-CSIC", email = "jesus.marco@csic.es" },
]
description = "An autoencoder for 3 bit 24 length sequences using a Liquid Time Constant RNN"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/jesusmarcodelucas/engrammer/engrammer"
"Bug Tracker" = "https://github.com/jesusmarcodelucas/engrammer/engrammer/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "ENGRAMMER_DATA_PATH=tests/data",
    "ENGRAMMER_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [ "engrammer" ]

[tool.setuptools.package-dir]
"engrammer" = "engrammer"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
engrammer = "engrammer.api"